# stocksim

./: .gitignore  README.md  app.backup.py  app.py  depricated.py  main.py  pyproject.toml  response.py  run.sh  src.py
langchain_examples/: chains.py  examples.py
langchain_utils/: caches.py  chains.py  embedding.py  examples.py  memories.py  output.py  prompts.py  retreivers.py
others/: market_event.json
prompts/: base_chat.txt  intent.txt  random_market_event.json  random_stock_event.json  search_stock.json  search_stock_verified.json  update_background.json  update_stock_price.json  update_story.json
repositories/: file_repository.py
src/chain/: biz_logic.py  conversation.py  event.py
src/config/: settings.py
src/event/: market.py  stock_event.json
src/llm/: azure.py
src/memory/: chat_memory.py
src/parser/: custom_output.py  json_output_parser.py
src/prompt/: load_prompt.py  samples.py
src/utils/: calculate.py  chat.py  event.py  ui.py
