[tool.poetry]
name = "stocksim"
version = "0.1.0"
description = ""
authors = ["oneline-hyunjun-jeon <hyunjun.jeon@onelineai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"
langchain = "^0.1.14"
langchain-openai = "^0.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
