[tool.poetry]
name = "stocksim"
version = "0.1.0"
description = ""
authors = ["oneline-hyunjun-jeon <hyunjun.jeon@onelineai.com>"]
readme = "README.md"
#package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
langchain = "^0.1.14"
langchain-openai = "^0.1.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
langchain-experimental = "^0.0.57"
huggingface = "^0.0.1"
torch = "^2.2.2"
transformers = "^4.39.3"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
